--- a/app/globals.css
+++ b/app/globals.css
@@ -100,3 +100,12 @@ body {
   background: url(/Image/glove.png);
   background-size: cover;
 }
+.bg-technlology {
+  background: url(/Image/footer-bg.png);
+  background-size: cover;
+}
+
+.bg-contact {
+  background: url(/Image/grid-bg.png);
+  background-size: cover;
+}
